corrected css route

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>Train Details</title>
-    <link href=".mytrain/css/bootstrap.css" rel="stylesheet">
-    <link href=".mytrain/css/freelancer.css" rel="stylesheet">
+    <link href="trainbooking-startDate/mytrain/css/bootstrap.css" rel="stylesheet">
+    <link href="trainbooking-startDate/mytrain/css/freelancer.css" rel="stylesheet">
 </head>
 
 <body id="page-top" class="index">
