--- a/trainbooking-startDate/mytrain/index.html
+++ b/trainbooking-startDate/mytrain/index.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2 qaBox">
                     <p class="questions">How many days before can I book a train ticket?</p>
-                    <p class="answers"> 120 days. Now, you can book the train ticket for the date:
+                    <p class="answers"> 120 days. Today, you can book the train ticket for the date:
                         <span id="futureDate" class="specialText"></span> <span class="smallFont" "">(dd/mm/yyyy)</span> i.e <span id="futureDay" class="specialText"></span>, <span id="futureMonth" class="specialText"></span> <span id="futureSpecificDate" class="specialText"></span> of <span id="futureYear" class="specialText"></span> </p>
                 </div>
                 <div class="col-lg-4 qaBox">
